<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_title">Quiz title</string>

    <string name="quiz_best_score">Your best score is %d points</string>
    <string name="quiz_last_score">Your last score is %d points</string>
    <string name="start_quiz_title">Start quiz %s</string>
    <string name="end_quiz_title">Quiz ended</string>
    <string name="end_quiz_message">You have earned %d points!</string>
    <string name="btn_finish_quiz_text">Finish quiz</string>


    <string name="filter">Filter..</string>
    <string name="ok_button">OK</string>
    <string name="next_question">Next question</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_your_app">login_title</string>
    <string name="login_title">Quiz Login</string>
    <string name="go_to_register_btn_text">Don\'t have account?</string>
    <string name="register_for_the_app">registration_title</string>
    <string name="fullName">Enter your name..</string>
    <string name="email">Enter your email..</string>
    <string name="register_title">Register</string>
    <string name="register">Register</string>

    <string name="server_error">Server error! Try again in few minutes.</string>
    <string name="bad_request_error">Bad request!</string>
    <string name="forbidden_access_error">You are not allowed for that!</string>
    <string name="unauthorized_error">Unauthorized!</string>
    <string name="not_found_error">Not found!</string>
    <string name="other_error">Dummy error!</string>
    <string name="empty_fields_error">No empty field are allowed!</string>
    <string name="register_fragment_unavailable_error">Register fragment is currently unavailable!</string>
    <string name="no_internet_connection_error">No internet connection! Try again.</string>

    <string name="preference_key">PREFERENCES_STORAGE</string>
    <string name="auth_key">USER_AUTH_TOKEN</string>
    <string name="points_key">USER_POINTS_KEY</string>
    <string name="log_out">Log out</string>
    <string name="retry">Retry</string>
    <string name="login_as_guest">Login as guest</string>
</resources>