<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout="@layout/fragment_login"
    android:background="@color/purple">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_150"
        android:layout_marginEnd="@dimen/large_150"
        android:layout_marginTop="@dimen/large_175"
        android:paddingBottom="@dimen/large_175"
        android:paddingStart="@dimen/normal_125"
        android:paddingEnd="@dimen/normal_125">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:layout_marginTop="@dimen/large_125"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large_125"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/darkPurple"
            android:layout_below="@+id/login_title"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_normal"
            android:hint="@string/username"
            android:layout_marginTop="@dimen/large_125">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_normal"
            app:boxBackgroundColor="@color/darkPurple"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="@dimen/large_100"
            android:layout_below="@id/email_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_input_layout"
            android:layout_marginTop="@dimen/large_125"
            android:text="@string/login"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkPurple"
            android:textSize="@dimen/text_size_normal"/>

        <TextView
            android:id="@+id/goToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_register_btn_text"
            android:layout_below="@id/login_user"
            android:layout_marginTop="@dimen/normal_150"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:padding="@dimen/normal_100"/>

    </RelativeLayout>
</layout>